# emias_test

./: README.md  app.py  config.py  requirements.txt
backend/: .gitignore  app.py  config.py  database.py  pyproject.toml
backend/models/: __init__.py  i_doc.py  p_doc.py
backend/routes/: i_doc.py  patient.py
backend/services/: i_doc.py  p_doc.py  user.py
frontend/: .gitignore  config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: api.js
frontend/src/components/: AddUserModal.jsx
models/: patient.py  user.py
routes/: i_doc.py  p_doc.py  patient.py  user.py
services/: __init__.py  patient.py  user.py
